--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html> 
-</html>
-</html>
-</html>
-</html>
-</html>
-</html>
-</html>
-</html>
-</html>
+<!DOCTYPE html> <html><head>
+  <title><Box magic</Title>
+  <link rel="stylesheet" type="text/css" href="box.css">
+ </head>
+ <body><div id="box">The box</div>
+   </body></html>
